--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,4 +1,49 @@
-@media (max-width: 768px) {
+@media (max-width: 800px) {
+  .app {
+    /* ++++++++++ Start Navbar Component media query ++++++++++ */
+    .navbar-container {
+      .hamburger {
+        display: block;
+        padding: 0 1rem;
+        cursor: pointer;
+        position: absolute;
+        top: 2px;
+        right: 10px;
+        color: #b48821;
+      }
+      .navbar {
+        .nav-menu {
+          display: none;
+          gap: 0;
+        }
+
+        .logo {
+          position: absolute;
+          h1 {
+            font-size: 3rem;
+          }
+          top: 21px;
+        }
+      }
+      .expanded {
+        background-color: $secondary-background-color; /* Use the defined variable here */
+        min-height: 55vh;
+
+        .nav-menu {
+          position: absolute;
+          top: 120px;
+          left: 0;
+          width: 100%;
+          display: flex;
+          flex-direction: column;
+        }
+      }
+    }
+    /* ++++++++++ End Navbar Component media query ++++++++++ */
+  }
+}
+
+/* @media (max-width: 768px) {
   .app {
     .about-container {
       flex-direction: column;
@@ -52,3 +97,4 @@
     }
   }
 }
+ */
