--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -73,7 +73,49 @@
 
 /* ++++++++++ Start of Hero Component style sheet ++++++++++ */
 .hero-container {
+  width: 100%;
+  height: 85vh;
+
+  background: linear-gradient(
+    360deg,
+    rgba(255, 255, 255, 0) 50%,
+    rgba(209, 204, 204, 0.445) 50%
+  );
+  .hero-heading {
+    h1 {
+      @include yoga;
+      font-weight: 300;
+      font-size: 19rem;
+      color: rgba(29, 28, 26, 0.805);
+      position: absolute;
+      left: 46rem;
+      top: 3rem;
+      z-index: 2;
+    }
+    .name {
+      top: 23rem;
+      left: 46rem;
+      position: absolute;
+    }
+  }
+  .ball {
+    width: 56rem;
+    height: 56rem;
+    background-color: rgb(215, 167, 39);
+    border-radius: 50%;
+    position: relative;
+    left: 80rem;
+
+    .gif {
+      width: 110rem;
+      height: 70rem;
+      position: absolute;
+      left: -35rem;
+      bottom: 1rem;
+    }
+  }
 }
+
 /* ++++++++++ End of Hero Component style sheet ++++++++++ */
 
 /* ++++++++++ Start of Aboutme Component style sheet ++++++++++ */
@@ -324,6 +366,7 @@
 
 /* ++++++++++ Start of Feedback Component style sheet ++++++++++ */
 .feedback-container {
+  margin-top: 5rem;
   .site-container {
     background-color: #ece8e7;
     padding: 3rem 10rem;
