bug fixed in service component

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -286,7 +286,7 @@
     display: flex;
     justify-content: center;
     .card-container {
-      background-image: url("../assets/images/wave.svg");
+      background-image: url("../assets/images/services/wave.svg");
       background-size: cover;
       outline: none;
       border: none;
