some media query for service componenet has been added

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,14 +1,14 @@
 //Font variable initialization
 
 $primary-background-color: white;
-$secondary-background-color: #ECE8E7;
+$secondary-background-color: #ece8e7;
 $text-color: #333;
 $button-text-color: white;
 
 //Media Query breakpoints
-$xs: 480px;
+$xs: 320px;
 $sm: 576px;
-$md: 915px;
+$md: 768px;
 $lg: 992px;
 $xl: 1200px;
 $xxl: 1400px;
