some changed has been to the navbar and footer on hover

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -44,7 +44,8 @@
           font-size: 1.2rem;
 
           &:hover {
-            opacity: 0.6;
+            border-bottom: 4px solid #b48821;
+            transition: ease-in-out;
           }
         }
       }
@@ -620,7 +621,8 @@ footer {
           font-size: 1.2rem;
 
           &:hover {
-            color: #b48821;
+            border-bottom: 4px solid #b48821;
+            transition: ease-in-out;
           }
         }
       }
