--- a/src/styles/media-query.scss
+++ b/src/styles/media-query.scss
@@ -1,4 +1,5 @@
-@media (max-width: 320px) {
+/* Media query max-width 320px */
+@media (max-width: $xs) {
   .app {
     /* Start of Service Component media query  */
 
@@ -64,6 +65,8 @@
     }
   }
 }
+
+/* Media query  max-width 576px*/
 @media (max-width: 800px) {
   .app {
     /* ++++++++++ Start Navbar Component media query ++++++++++ */
