--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -23,15 +23,27 @@
     color: #001f3f;
   }
 }
+
+/* Heading 2 style mixin */
 @mixin heading-2-style {
   color: #b48821;
   font-size: 3rem;
 }
 
+/* Card shadow mixin */
 @mixin card-shadow {
   box-shadow: -16px -19px 57px 32px rgba(0, 0, 0, 0.1),
     -30px 6px 15px -3px rgba(0, 0, 0, 0.1);
   border-radius: 1rem;
+}
+
+/* section padding style mixin */
+
+@mixin section-padding-style {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 120rem;
+  padding: 0 2rem;
 }
 /* ---------------------------- Mixin for Heading 2 color style -------------------------- */
 
